--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "zip:layer": "rm -rf nodejs && mkdir nodejs && cp package.json nodejs/ && cp package-lock.json nodejs/ && cd nodejs && npm i --production",
     "deploy": "sls deploy"
   },
@@ -15,17 +15,21 @@
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
     "aws-sdk": "^2.918.0",
+    "imagemagick": "^0.1.3",
     "source-map-support": "^0.5.19",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
+    "jest": "^27.0.3",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-webpack": "^5.3.5",
+    "ts-jest": "^27.0.2",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
